--- a/darstell.local/css/upload.css
+++ b/darstell.local/css/upload.css
@@ -393,11 +393,20 @@ input:-webkit-autofill {
 #filewin{
     color: rgb(110, 255, 110);
     text-align: center;
+    margin-bottom: 10px;
 }
 #errorsecurity{
     color: rgb(255, 110, 110);
     text-align: center;
     margin-bottom: 10px;
+}
+#error{
+    color: rgb(255, 110, 110);
+    text-align: center;
+    margin-bottom: 10px;
+}
+a{
+    color: #7879e0;
 }
 @media (max-width: 680px){
     .niz{
