--- a/darstell.local/css/profile.css
+++ b/darstell.local/css/profile.css
@@ -219,6 +219,8 @@ input {outline: none;}
     color: #fff;
     margin: 0px;
     align-items: center;
+    display: flex;
+    gap: 6px;
 }
 .profile-palka{
     border-top: 1px solid rgba(130, 130, 130, 0.5);
